# lun

./: .gitignore  Cargo.toml  README.md  b  hello.k2  hello.l2  rust-toolchain.toml  tests.ron  typos.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  typos.yml
compiler/lunc/: Cargo.toml
compiler/lunc/src/: lib.rs  main.rs
compiler/lunc_ast/: Cargo.toml
compiler/lunc_ast/src/: lib.rs  symbol.rs
compiler/lunc_clifgen/: Cargo.toml
compiler/lunc_clifgen/src/: lib.rs  textual.rs  translator.rs
compiler/lunc_codegen/src/: lib.rs
compiler/lunc_cranelift_codegen/: Cargo.toml
compiler/lunc_cranelift_codegen/src/: lib.rs  start.rs  textual.rs  translator.rs
compiler/lunc_desugar/: Cargo.toml
compiler/lunc_desugar/src/: diags.rs  lib.rs  pretty.rs  symbol.rs
compiler/lunc_diag/: Cargo.toml
compiler/lunc_diag/src/: lib.rs
compiler/lunc_dsir/: Cargo.toml
compiler/lunc_dsir/src/: lib.rs  pretty.rs
compiler/lunc_entity/: Cargo.toml
compiler/lunc_entity/src/: lib.rs
compiler/lunc_fir/: Cargo.toml
compiler/lunc_fir/src/: lib.rs  verifier.rs
compiler/lunc_firgen/: Cargo.toml
compiler/lunc_firgen/src/: lib.rs
compiler/lunc_lexer/: Cargo.toml
compiler/lunc_lexer/src/: lib.rs
compiler/lunc_linkage/: Cargo.toml
compiler/lunc_linkage/src/: lib.rs
compiler/lunc_llib_meta/: Cargo.toml
compiler/lunc_llib_meta/src/: lib.rs  meta.rs
compiler/lunc_parser/: Cargo.toml
compiler/lunc_parser/src/: diags.rs  directive.rs  expr.rs  item.rs  lib.rs  pretty.rs  stmt.rs
compiler/lunc_scir/: Cargo.toml
compiler/lunc_scir/src/: checking.rs  diags.rs  lib.rs  pretty.rs  safety_ck.rs
compiler/lunc_seq/: Cargo.toml
compiler/lunc_seq/src/: builder.rs  lib.rs  pretty.rs  sir.rs
compiler/lunc_token/: Cargo.toml
compiler/lunc_token/src/: lib.rs
compiler/lunc_untyped/: Cargo.toml
compiler/lunc_untyped/src/: diags.rs  eval.rs  lib.rs  pretty.rs  unifier.rs  utir.rs
compiler/lunc_untyped/src/pretty/: lun.rs  mod.rs  tree.rs
compiler/lunc_utils/: Cargo.toml
compiler/lunc_utils/src/: idtype.rs  lib.rs  pretty.rs  symbol.rs  token.rs
crates/l2_bytecode/: Cargo.toml
crates/l2_bytecode/src/: lib.rs
crates/l2_diagnostic/: Cargo.toml
crates/l2_diagnostic/src/: lib.rs
crates/l2_lexer/: Cargo.toml
crates/l2_lexer/src/: diags.rs  lib.rs
crates/l2_parser/: Cargo.toml
crates/l2_parser/src/: diags.rs  expr.rs  lib.rs  stmt.rs
crates/l2_semack/: Cargo.toml
crates/l2_semack/src/: lib.rs
crates/l2_typeck/: Cargo.toml
crates/l2_typeck/src/: lib.rs
crates/l2_utils/: Cargo.toml
crates/l2_utils/src/: lib.rs  token.rs
crates/l2_vm/: Cargo.toml
crates/l2_vm/src/: lib.rs
crates/lun_bc/: Cargo.toml
crates/lun_bc/src/: bin.rs  lib.rs
crates/lun_codegen/: Cargo.toml
crates/lun_codegen/src/: lib.rs
crates/lun_diag/: Cargo.toml
crates/lun_ir/: Cargo.toml
crates/lun_lexer/: Cargo.toml
crates/lun_parser/: Cargo.toml
crates/lun_semack/: Cargo.toml
crates/lun_utils/: Cargo.toml
crates/lun_vm/: Cargo.toml  README.md
crates/lun_vm/src/: lib.rs
crates/lunc/: Cargo.toml
crates/lunc/src/: lib.rs  main.rs
crates/lunc_clifgen/: Cargo.toml
crates/lunc_codegen/: Cargo.toml
crates/lunc_diag/: Cargo.toml
crates/lunc_dsir/: Cargo.toml
crates/lunc_fir/: Cargo.toml
crates/lunc_lexer/: Cargo.toml
crates/lunc_parser/: Cargo.toml
crates/lunc_scir/: Cargo.toml
crates/lunc_semack/: Cargo.toml
crates/lunc_utils/: Cargo.toml
crates/luntests/: Cargo.toml
crates/luntests/src/: lib.rs  main.rs
examples/: fibonacci.lun  forward_use.lun  function.lun  helloworld.lun  testings.lun
examples/hello_c_ffi/: Makefile  README.md  hello.lun  main.c
examples/hello_world_c_rt/: Makefile  README.md  hello.lun  main.c
src/: blob.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  vm.rs
src/tools/luntests/: Cargo.toml
src/tools/luntests/src/: lib.rs
tests/: README.md
tests/behavior/: E041.lun  E042.lun  logic_and.lun  logic_or.lun
tests/desugaring/: E010.lun  E014.lun  expression.lun  forward_use.lun  global_def.lun  lower_expr.lun  predicate_loop.lun  shadowing.lun
tests/dsir/: E013.lun  E014.lun  E019.lun  E026.lun  bim.lun  my_module.lun  nested.lun  shadowing.lun
tests/lexer/: E001.lun  E002.lun  E003.lun  E004.lun  E005.lun  E020.lun  E021.lun  E022.lun  E023.lun  E024.lun  E025.lun  char_literal.lun  float_literal.lun  integer_literals.lun  kw_idents.lun  punctuation.lun  specialized_literals.lun  string_literal.lun
tests/multifile/: dbg.lun  lib.lun
tests/parser/: E006_binop_expr_resilience_1.lun  E006_block_1.lun  E006_block_2.lun  E006_block_3.lun  E006_block_4.lun  E006_block_5.lun  E006_block_resilience_1.lun  E006_borrow_expr_resilience_1.lun  E006_break.lun  E006_break_expr_resilience_1.lun  E006_break_expr_resilience_2.lun  E006_call_expr_resilience_1.lun  E006_call_expr_resilience_2.lun  E006_continue.lun  E006_continue_expr_resilience_1.lun  E006_expr_1.lun  E006_extern_block_1.lun  E006_extern_block_2.lun  E006_extern_block_3.lun  E006_extern_block_resilience_1.lun  E006_extern_block_resilience_2.lun  E006_extern_block_resilience_3.lun  E006_field_expr_resilience_1.lun  E006_for_expr_resilience_1.lun  E006_for_expr_resilience_2.lun  E006_for_expr_resilience_3.lun  E006_for_expr_resilience_4.lun  E006_funcall_expr.lun  E006_fundecl_expr_resilience_1.lun  E006_fundecl_expr_resilience_2.lun  E006_fundecl_expr_resilience_3.lun  E006_fundef_expr_resilience_1.lun  E006_fundef_expr_resilience_2.lun  E006_fundef_expr_resilience_3.lun  E006_fundef_expr_resilience_4.lun  E006_funkw_expr_1.lun  E006_funkw_expr_2.lun  E006_funkw_expr_3.lun  E006_funkw_expr_4.lun  E006_funptr_1.lun  (+59 more)
tests/scir/: E008.lun  E009.lun  E011.lun  E016.lun  E027.lun  E028.lun  E029.lun  E030.lun  E031.lun  E032.lun  E033.lun  E034.lun  E036.lun  E037.lun  E039.lun  E040.lun  E041.lun  constant_evaluation.lun  empty.lun  extern_block.lun  fun_ret_ty.lun  label_kw_expr.lun  loop_semantics.lun  never_block.lun
tests/utir/: E017.lun  E040.lun
xtask/: Cargo.toml
xtask/src/: main.rs
(+55 files in other folders)
