[workspace]
resolver = "2"
members = [
  "compiler/lunc",
  "compiler/lunc_cranelift_codegen",
  "compiler/lunc_diag",
  "compiler/lunc_dsir",
  "compiler/lunc_lexer",
  "compiler/lunc_linkage",
  "compiler/lunc_llib_meta",
  "compiler/lunc_parser",
  "compiler/lunc_scir",
  "compiler/lunc_utils",
  "src/tools/xtask",
  "src/tools/luntests",
]

[workspace.package]
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
lunc_cranelift_codegen = { path = "compiler/lunc_cranelift_codegen" }
lunc_diag = { path = "compiler/lunc_diag" }
lunc_dsir = { path = "compiler/lunc_dsir" }
lunc_lexer = { path = "compiler/lunc_lexer" }
lunc_linkage = { path = "compiler/lunc_linkage" }
lunc_llib_meta = { path = "compiler/lunc_llib_meta" }
lunc_parser = { path = "compiler/lunc_parser" }
lunc_scir = { path = "compiler/lunc_scir" }
lunc_utils = { path = "compiler/lunc_utils" }

# other dependencies
thiserror = "2.0.17"
codespan-reporting = "0.12.0"
half = "2.6.0"
termcolor = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
humantime = "2.3.0"
