[package]
name = "lunc"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_ast = { workspace = true }
lunc_cranelift_codegen = { workspace = true }
lunc_diag = { workspace = true }
lunc_dsir = { workspace = true }
lunc_lexer = { workspace = true }
lunc_linkage = { workspace = true }
lunc_llib_meta = { workspace = true }
lunc_parser = { workspace = true }
lunc_scir = { workspace = true }
lunc_token = { workspace = true }
lunc_utils = { workspace = true }

# other dependencies
thiserror = { workspace = true }
termcolor = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
shadow-rs = "1.3.0"

[build-dependencies]
shadow-rs = "1.3.0"
