[package]
name = "lunc"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_ast = { workspace = true }
lunc_cranelift_codegen = { workspace = true }
lunc_diag = { workspace = true }
lunc_desugar = { workspace = true }
lunc_entity = { workspace = true }
lunc_lexer = { workspace = true }
lunc_linkage = { workspace = true }
lunc_llib_meta = { workspace = true }
lunc_parser = { workspace = true }
lunc_seq = { workspace = true }
lunc_token = { workspace = true }
lunc_untyped = { workspace = true }
lunc_utils = { workspace = true }

# other dependencies
thiserror = { workspace = true }
termcolor = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
shadow-rs = "1.4.0"

[build-dependencies]
shadow-rs = "1.4.0"
