[package]
name = "lunc_clifgen"
description = "Cranelift IR Generator, SCIR -> CLIF"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_utils = { workspace = true }
lunc_scir = { workspace = true }

# other dependencies
cranelift-frontend = { version = "0.123.2" }
cranelift-codegen = { version = "0.123.2", features = ["all-native-arch"] }
cranelift-module = { version = "0.124.0" }
cranelift-object = { version = "0.123.2" }
