[package]
name = "lunc_desugar"
description = "Desugared Intermediate Representation of Lun and its machinery."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_diag = { workspace = true }
lunc_lexer = { workspace = true }
lunc_parser = { workspace = true }
lunc_utils = { workspace = true }
lunc_llib_meta = { workspace = true }
lunc_ast = { workspace = true }
lunc_token = { workspace = true }
