[package]
name = "lunc_dsir"
description = "Desugared Intermediate Representation of Lun."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_diag = { workspace = true }
lunc_lexer = { workspace = true }
lunc_parser = { workspace = true }
lunc_utils = { workspace = true }
lunc_llib_meta = { workspace = true }
lunc_ast = { workspace = true }
