[package]
name = "lunc_fir"
description = "Final Intermediate representation of Lun, the closest to the final assembly."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_utils = { workspace = true }
lunc_scir = { workspace = true }

# other dependencies
thiserror = { workspace = true }
