[package]
name = "lunc_lexer"
description = "Lexer for Lun."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_utils = { workspace = true }
lunc_token = { workspace = true }
lunc_diag = { workspace = true }

# other dependencies
thiserror = { workspace = true }
