[package]
name = "lunc_llib_meta"
description = """
contains the ModuleTree, and everything related to the metadata added inside of
a `llib` orb type.
"""
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_utils = { workspace = true }
serde = { workspace = true }
postcard = "1.1.3"
chrono = { version = "0.4.42", features = ["serde"] }
