[package]
name = "lunc_parser"
description = "Parser for Lun."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_diag = { workspace = true }
lunc_utils = { workspace = true }
lunc_ast = { workspace = true }
lunc_token = { workspace = true }

# other dependencies
thiserror = { workspace = true }
bitflags = "2.9.4"
