[package]
name = "lunc_scir"
description = "Semantic Checked Intermediate Representation of Lun."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_diag = { workspace = true }
lunc_dsir = { workspace = true }
lunc_utils = { workspace = true }
lunc_llib_meta = { workspace = true }

# other dependencies
