[package]
name = "lunc_seq"
description = "Sequantial Intermediate Representation of Lun"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_ast = { workspace = true }
lunc_desugar = { workspace = true }
lunc_diag = { workspace = true }
lunc_entity = { workspace = true }
lunc_utils = { workspace = true }

# other dependencies
