[package]
name = "lunc_untyped"
description = "Untyped Intermediate Representation of Lun."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lunc_ast = { workspace = true }
lunc_desugar = { workspace = true }
lunc_diag = { workspace = true }
lunc_entity = { workspace = true }
lunc_seq = { workspace = true }
lunc_token = { workspace = true }
lunc_utils = { workspace = true }

# other dependencies
