[package]
name = "lunc_utils"
description = "Utils for Lun libs."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
concat-idents = "1.1.5"
target-lexicon = { version = "0.13.3", features = ["std", "serde_support"] }
clap = { workspace = true }
