[package]
name = "lun_vm"
description = "VM of lun."
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
lun_utils = { workspace = true }
lun_bc = { workspace = true }

# other dependencies
bytemuck = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
