[package]
name = "luntests"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
lunc_utils = { workspace = true }

# other dependencies
termcolor = { workspace = true }
serde = { workspace = true }
ron = "0.11.0"
indexmap = { version = "2.11.4", features = ["serde"] }
humantime = "2.3.0"
thiserror = { workspace = true }
clap = { version = "4.5.47", features = ["derive"] }
