[package]
name = "luntests"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
lunc_utils = { workspace = true }

# other dependencies
termcolor = { workspace = true }
serde = { workspace = true }
ron = "0.11.0"
indexmap = { version = "2.12.0", features = ["serde"] }
humantime = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
